--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,22 +1,22 @@
 # main links links
 main:
   - title: "About Me"
-    url: "/zqming-homepage.github.io/#about-me"
+    url: "/chengzhang-homepage.github.io/#about-me"
 
   - title: "News"
-    url: "/zqming-homepage.github.io/#-news"
+    url: "/chengzhang-homepage.github.io/#-news"
 
   - title: "Publications"
-    url: "/zqming-homepage.github.io/#-publications"
+    url: "/chengzhang-homepage.github.io/#-publications"
 
   - title: "Honors and Awards"
-    url: "/#-honors-and-awards"
+    url: "/chengzhang-homepage.github.io/#-honors-and-awards"
 
   - title: "Educations"
-    url: "/#-educations"
+    url: "/chengzhang-homepage.github.io/#-educations"
 
   - title: "Invited Talks"
-    url: "/#-invited-talks"
+    url: "/chengzhang-homepage.github.io/#-invited-talks"
 
   - title: "Internships"
-    url: "/#-internships"
+    url: "/chengzhang-homepage.github.io/#-internships"
