--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 
 # Site Author
 author:
-  name             : "Zhangqiang Ming"
+  name             : "Cheng Zhang"
   avatar           : "images/mzq1000.jpg"
   bio              : "Huazhong University of Science and Technology(HUST)"
   location         : "Wuhan, China"
