--- a/_config.yml
+++ b/_config.yml
@@ -24,12 +24,12 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 author:
   name             : "Cheng Zhang"
   avatar           : "images/mzq1000.jpg"
-  bio              : "Huazhong University of Science and Technology(HUST)"
-  location         : "Wuhan, China"
+  bio              : "Dalian Institute of Chemical Physics, University of Chinese Academy of Sciences (DICP, UCAS) "
+  location         : "Dalian, China"
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=YOUR_GOOGLE_SCHOLAR_ID"
-  email            : "Lorem@ipsum.com"
+  email            : "chengzhang@dicp.cn"
   researchgate     :  # e.g., "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
