--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 # Site Author
 author:
   name             : "Cheng Zhang"
-  avatar           : "images/mzq1000.jpg"
+  avatar           : "images/chengzhang_3.jpg"
   bio              : "Dalian Institute of Chemical Physics, University of Chinese Academy of Sciences (DICP, UCAS) "
   location         : "Dalian, China"
   employer         :
